--- a/htmls/branchhtmls/border-color.html
+++ b/htmls/branchhtmls/border-color.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>padding</title>
+		<title>border-color</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">padding</strong>
+				<strong class="has-text-info">border-color</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,13 +30,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding：</strong><span>[ &lt;length&gt; | &lt;percentage&gt; ]{1,4}</span>
+						<strong>border-color：</strong><span>&lt;color&gt;{1,4}</span>
 					</li>
 					<li>
 						<strong>默认值：</strong><span class="m-border-bg">看每个独立属性</span>
 					</li>
 					<li>
-						<strong>适用于：</strong><span>所有元素，除 table-row-group | table-header-group | table-footer-group | table-column-group | table-row 外</span>
+						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
 						<strong>继承性：</strong><span>无</span>
@@ -48,7 +48,7 @@
 						<strong>计算值：</strong><span>看每个独立属性</span>
 					</li>
 					<li>
-						<strong>相关属性：</strong><span>[ padding-top ] || [ padding-right ] || [ padding-bottom ] || [ padding-left ]</span>
+						<strong>相关属性：</strong><span>[ border-top-color ] || [ border-right-color ] || [ border-bottom-color ] || [ border-left-color ]</span>
 					</li>
 				</ul>
 			</div>
@@ -58,10 +58,7 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>&lt;length&gt;：</strong><span>用长度值来定义内补白。不允许负值</span>
-					</li>
-					<li>
-						<strong>&lt;percentage&gt;：</strong><span>用百分比来定义内补白。水平（默认）书写模式下，参照其包含块 width 进行计算，其它情况参照 height 。不允许负值</span>
+						<strong>&lt;color&gt;：</strong><span>指定颜色。</span>
 					</li>
 				</ul>
 			</div>
@@ -71,7 +68,7 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>检索或设置对象四边的内部边距。</strong>
+						<strong>设置或检索对象的边框颜色。</strong><span>参阅border-colors属性。</span>
 					</li>
 					<li>
 						<span>如果提供全部四个参数值，将按上、右、下、左的顺序作用于四边。</span>
@@ -86,9 +83,9 @@
 						<span>如果提供三个，第一个用于上，第二个用于左、右，第三个用于下。</span>
 					</li>
 					<li>
-						<span>非替代(non-Replaced)行内元素可以使用该属性设置左、右两边的内补丁；若要设置上、下两边的内补丁，必须先使该对象表现为块级或内联块级。</span>
+						<span>如果border-width等于0或border-style设置为none，本属性将被忽略。</span>
 					</li>
-					<li>对应的脚本特性为padding。</li>
+					<li>对应的脚本特性为borderColor。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -121,17 +118,32 @@
 						     <tr>
 						     	<th>Basic Support</th>
 						     	<td class="m-green">6.0+</td>
-						     	<td class="m-green">2.0+</td>
-						     	<td class="m-green">4.0+</td>
-						     	<td class="m-green">3.1+</td>
-						     	<td class="m-green">3.5+</td>
-						     	<td class="m-green">3.2+</td>
-						     	<td class="m-green">2.1+</td>
-						     	<td class="m-green">18.0+</td>
+						     	<td rowspan="5" class="m-green">2.0+</td>
+						     	<td rowspan="5" class="m-green">4.0+</td>
+						     	<td rowspan="5" class="m-green">3.1+</td>
+						     	<td rowspan="5" class="m-green">3.5+</td>
+						     	<td rowspan="5" class="m-green">3.2+</td>
+						     	<td rowspan="5" class="m-green">2.1+</td>
+						     	<td rowspan="5" class="m-green">18.0+</td>
+						     </tr>
+						     <tr>
+						     	<th rowspan="2">transparent</th>
+						     	<td class="m-red">6.0#1</td>
+						     </tr>
+						     <tr>
+						     	<td class="m-green">7.0+</td>
+						     </tr>
+						     <tr>
+						     	<th rowspan="2">RGBA,HSL,HSLA</th>
+						     	<td class="m-red">6.0-8.0#1</td>
+						     </tr>
+						     <tr>
+						     	<td class="m-green">9.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
 					</li>
+					<li>1.需要注意的是，边框颜色如果设置了不支持的值，则效果等同于默认值 currentColor。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -230,6 +242,6 @@
 		</div>
 		<script src="../../js/clipboard.min.js"></script>
 		<script src="../../js/common.js"></script>
-		<script src="../../js/padding-code.js"></script>
+		<script src="../../js/border-color-code.js"></script>
 	</body>
 </html>
