--- a/htmls/branchhtmls/border-image.html
+++ b/htmls/branchhtmls/border-image.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
-		<title>padding</title>
+		<title>border-image</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
 		<!--<link rel="stylesheet" href="../../lib/font-awesome.css">-->
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<strong class="has-text-info">padding</strong>
+				<strong class="has-text-info">border-image</strong>
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,25 +30,23 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>padding：</strong><span>[ &lt;length&gt; | &lt;percentage&gt; ]{1,4}</span>
+						<strong>border-image：</strong><span>&lt;' border-image-source '&gt; || &lt;' border-image-slice '&gt; [ / &lt;' border-image-width '&gt; 
+							| / &lt;' border-image-outset '&gt; ]? || &lt;' border-image-repeat '&gt;</span>
 					</li>
 					<li>
 						<strong>默认值：</strong><span class="m-border-bg">看每个独立属性</span>
 					</li>
 					<li>
-						<strong>适用于：</strong><span>所有元素，除 table-row-group | table-header-group | table-footer-group | table-column-group | table-row 外</span>
+						<strong>适用于：</strong><span>看每个独立属性</span>
 					</li>
 					<li>
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>是</span>
+						<strong>动画性：</strong><span>看每个独立属性</span>
 					</li>
 					<li>
 						<strong>计算值：</strong><span>看每个独立属性</span>
-					</li>
-					<li>
-						<strong>相关属性：</strong><span>[ padding-top ] || [ padding-right ] || [ padding-bottom ] || [ padding-left ]</span>
 					</li>
 				</ul>
 			</div>
@@ -58,10 +56,19 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>&lt;length&gt;：</strong><span>用长度值来定义内补白。不允许负值</span>
+						<strong>&lt;'border-image-source'&gt;：</strong><span>设置或检索对象的边框是否用图像定义样式或图像来源路径。</span>
 					</li>
 					<li>
-						<strong>&lt;percentage&gt;：</strong><span>用百分比来定义内补白。水平（默认）书写模式下，参照其包含块 width 进行计算，其它情况参照 height 。不允许负值</span>
+						<strong>&lt;'border-image-slice'&gt;：</strong><span>设置或检索对象的边框背景图的分割方式。</span>
+					</li>
+					<li>
+						<strong>&lt;'border-image-width'&gt;：</strong><span>设置或检索对象的边框厚度。</span>
+					</li>
+					<li>
+						<strong>&lt;'border-image-outset'&gt;：</strong><span>设置或检索对象的边框背景图的扩展。</span>
+					</li>
+					<li>
+						<strong>&lt;'border-image-repeat'&gt;：</strong><span>设置或检索对象的边框图像的平铺方式。</span>
 					</li>
 				</ul>
 			</div>
@@ -71,24 +78,12 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>检索或设置对象四边的内部边距。</strong>
+						<strong>复合属性。设置或检索对象的边框样式使用图像来填充。</strong><span></span>
 					</li>
 					<li>
-						<span>如果提供全部四个参数值，将按上、右、下、左的顺序作用于四边。</span>
+						<span>使用图像替代 &lt;' border-style '&gt; 去定义边框样式。当 &lt;' border-image '&gt; 为none或图像不可见时，将会显示 &lt;' border-style '&gt; 所定义的边框样式效果。</span>
 					</li>
-					<li>
-						<span>如果只提供一个，将用于全部的四边。</span>
-					</li>
-					<li>
-						<span>如果提供两个，第一个用于上、下，第二个用于左、右。</span>
-					</li>
-					<li>
-						<span>如果提供三个，第一个用于上，第二个用于左、右，第三个用于下。</span>
-					</li>
-					<li>
-						<span>非替代(non-Replaced)行内元素可以使用该属性设置左、右两边的内补丁；若要设置上、下两边的内补丁，必须先使该对象表现为块级或内联块级。</span>
-					</li>
-					<li>对应的脚本特性为padding。</li>
+					<li>对应的脚本特性为borderImage。</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -119,15 +114,27 @@
 						  </thead>
 						  <tbody>
 						     <tr>
-						     	<th>Basic Support</th>
-						     	<td class="m-green">6.0+</td>
-						     	<td class="m-green">2.0+</td>
-						     	<td class="m-green">4.0+</td>
-						     	<td class="m-green">3.1+</td>
-						     	<td class="m-green">3.5+</td>
-						     	<td class="m-green">3.2+</td>
-						     	<td class="m-green">2.1+</td>
-						     	<td class="m-green">18.0+</td>
+						     	<th rowspan="3">Basic Support</th>
+						     	<td class="m-red">6.0-10.0</td>
+						     	<td class="m-red">2.0-3.0</td>
+						     	<td class="m-pink">4.0-14.0<sup>-webkit-</sup></td>
+						     	<td class="m-pink">3.1-5.1<sup>-webkit-</sup></td>
+						     	<td rowspan="3" class="m-green">15.0+</td>
+						     	<td class="m-pink">3.2-5.1<sup>-webkit-</sup></td>
+						     	<td class="m-pink">2.1-4.3<sup>-webkit-</sup></td>
+						     	<td rowspan="3" class="m-green">18.0+<sup>-webkit-</sup></td>
+						     </tr>
+						     <tr>
+						     	<td rowspan="2" class="m-green">11.0+</td>
+						     	<td class="m-pink">3.5-14.0<sup>-moz-</sup></td>
+						     	<td class="m-green">15.0<sup>-webkit-</sup></td>
+						     	<td rowspan="2" class="m-green">6.0+</td>
+						     	<td rowspan="2" class="m-green">6.1+</td>
+						     	<td rowspan="2" class="m-green">4.4-4.4.4</td>
+						     </tr>
+						     <tr>
+						     	<td class="m-green">15.0+</td>
+						     	<td class="m-green">16.0+</td>
 						     </tr>
 						  </tbody>
 						</table>
@@ -230,6 +237,6 @@
 		</div>
 		<script src="../../js/clipboard.min.js"></script>
 		<script src="../../js/common.js"></script>
-		<script src="../../js/padding-code.js"></script>
+		<script src="../../js/border-image-code.js"></script>
 	</body>
 </html>
