--- a/htmls/branchhtmls/margin.html
+++ b/htmls/branchhtmls/margin.html
@@ -212,6 +212,9 @@
 		      <div class="content">
 		        <p>
 		          <strong>Carry Qiu</strong> <small>187346709@qq.com</small> <small></small>
+		          <span>-----欢迎提交问题到微博上：</span>
+		           <a href="https://weibo.com/1838110001" target="_blank">@随心随缘有什么问题</a>
+		          <iframe width="163" height="24" src="http://widget.weibo.com/relationship/followbutton.php?language=zh_cn&width=63&height=24&uid=1838110001&style=2btn=red&dpc=1"></iframe>
 		          <br>
 		       
 		        </p>
